Change header implementation for Publish interface
Match the markup, styling, and content used in Old Publish, so that
users have a consistent experience as they move between Old and New.

This uses the Old Publish implementation as a starting point and moves
across the relevant pieces into the component-based header we have in
this codebase.

This also involves adding a phase banner component, as Old Publish
displays this underneath the main header, rather than as an inline label
in the header itself.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,5 +1,6 @@
 environment:
   name: "beta"
+  label: "Beta"
 support_email: becomingateacher@digital.education.gov.uk
 
 # URL of this app for the callback after sigining in
@@ -64,6 +65,9 @@ google:
     dataset: replaceme
     api_json_key: ""
     table_name: events
+
+feedback:
+  link: https://docs.google.com/forms/d/e/1FAIpQLSfZNWa6zx30SkF_1EAwqNPZHOgK8qYcVQ7uDyhi0P6oPm71zg/viewform
 
 features:
   send_request_data_to_bigquery: false
