--- a/config/settings/review.yml
+++ b/config/settings/review.yml
@@ -1,6 +1,7 @@
 skylight:
   enable: false
 environment:
+  label: "Review"
   name: "review"
 publish_url: https://qa.publish-teacher-training-courses.service.gov.uk
 find_url: https://qa.find-postgraduate-teacher-training.service.gov.uk
