--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -3,6 +3,7 @@ publish_api_url: https://sandbox.api.publish-teacher-training-courses.service.go
 publish_url: https://sandbox.publish-teacher-training-courses.service.gov.uk
 find_url: https://sandbox.find-postgraduate-teacher-training.service.gov.uk
 environment:
+  label: "Sandbox"
   name: "sandbox"
 
 base_url: https://sandbox.api.publish-teacher-training-courses.service.gov.uk
