--- a/config/settings.yml
+++ b/config/settings.yml
@@ -67,6 +67,7 @@ google:
 
 features:
   send_request_data_to_bigquery: false
+  display_migration_signin: false
   rollover:
     # Normally a short period of time between rollover and the next cycle
     # actually starting when it would be set to false
