--- a/config/settings/qa.yml
+++ b/config/settings/qa.yml
@@ -4,7 +4,7 @@ publish_url: https://qa.publish-teacher-training-courses.service.gov.uk
 find_url: https://qa.find-postgraduate-teacher-training.service.gov.uk
 
 # URL of this app for the callback after sigining in
-base_url: https://qa.api.publish-teacher-training-courses.service.gov.uk
+base_url: https://qa2.publish-teacher-training-courses.service.gov.uk
 
 bg_jobs:
   save_statistic:
