--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -6,11 +6,10 @@ environment:
   label: "Sandbox"
   name: "sandbox"
 
-base_url: https://sandbox.api.publish-teacher-training-courses.service.gov.uk
+base_url: https://sandbox2.publish-teacher-training-courses.service.gov.uk
 
 dfe_signin:
   issuer: https://oidc.signin.education.gov.uk
   secret: please_change_me # Override with SETTINGS__DFE_SIGNIN__SECRET
   profile: https://profile.signin.education.gov.uk
-  base_url: https://sandbox.api.publish-teacher-training-courses.service.gov.uk
   user_search_url: https://support.signin.education.gov.uk/users
