--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -3,6 +3,9 @@ publish_api_url: https://api.publish-teacher-training-courses.service.gov.uk
 publish_url: https://www.publish-teacher-training-courses.service.gov.uk
 find_url: https://www.find-postgraduate-teacher-training.service.gov.uk
 
+search_ui:
+  base_url: https://www.find-postgraduate-teacher-training.service.gov.uk
+
 base_url: https://www2.publish-teacher-training-courses.service.gov.uk
 
 dfe_signin:
