--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -6,6 +6,9 @@ environment:
   label: "Sandbox"
   name: "sandbox"
 
+search_ui:
+  base_url: https://sandbox.find-postgraduate-teacher-training.service.gov.uk
+
 base_url: https://sandbox2.publish-teacher-training-courses.service.gov.uk
 
 dfe_signin:
