--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -3,6 +3,9 @@ publish_api_url: https://staging.api.publish-teacher-training-courses.service.go
 publish_url: https://staging.publish-teacher-training-courses.service.gov.uk
 find_url: https://staging.find-postgraduate-teacher-training.service.gov.uk
 
+search_ui:
+  base_url: https://staging.find-postgraduate-teacher-training.service.gov.uk
+
 # URL of this app for the callback after sigining in
 base_url: https://staging2.publish-teacher-training-courses.service.gov.uk
 
