Turn on old publish sign in prompt for prod and sandbox

--- a/config/settings/qa.yml
+++ b/config/settings/qa.yml
@@ -26,4 +26,4 @@ basic_auth:
 
 features:
   send_request_data_to_bigquery: true
-  display_migration_signin: true
+  display_migration_signin: false
