--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -8,3 +8,6 @@ gcp_api_key: please_change_me
 environment:
   label: "development"
   name: "development"
+
+features:
+  display_migration_signin: false
