[0563] Fixed linter issues

--- a/config/rubocop/lint.yml
+++ b/config/rubocop/lint.yml
@@ -15,3 +15,13 @@ Lint/RaiseException:
 
 Lint/StructNewOverride:
   Enabled: true
+
+# NOTE: Cop Rails/LexicallyScopedActionFilter conflicts with Lint/UselessMethodDefinition
+# https://github.com/rubocop/rubocop-rails/issues/343
+Lint/UselessMethodDefinition:
+  Exclude:
+    - 'app/controllers/publish_interface/courses/applications_open_controller.rb'
+    - 'app/controllers/publish_interface/courses/modern_languages_controller.rb'
+    - 'app/controllers/publish_interface/courses/outcome_controller.rb'
+    - 'app/controllers/publish_interface/courses/sites_controller.rb'
+    - 'app/controllers/publish_interface/courses/subjects_controller.rb'
