--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -5,7 +5,7 @@ source "https://rubygems.org"
 ruby "2.7.4"
 
 # Include the tech docs gem
-gem "govuk_tech_docs", github: "DFE-Digital/tech-docs-gem", branch: "fix-urls"
+gem "govuk_tech_docs", git: "https://github.com/DFE-Digital/tech-docs-gem"
 
 group :test do
   gem "capybara"
