--- a/.github/workflows/build-nocache.yml
+++ b/.github/workflows/build-nocache.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE: dfedigital/teacher-training-api
+      DOCKER_IMAGE: ghcr.io/dfe-digital/teacher-training-api
 
     steps:
       - name: Checkout
