--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -114,6 +114,7 @@ runs:
         deployment_id: ${{ steps.deployment.outputs.deployment_id }}
         env_url: ${{ env.DEPLOY_URL }}
         ref: ${{ env.DEPLOY_REF }}
+        override: false
 
     - name: Alert on Failure
       if: ${{ failure() && github.ref == 'refs/heads/master' }}
