--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -46,7 +46,6 @@ jobs:
         echo "DOCKER_IMAGE_TAG=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
 
     - name: Login to GitHub Container Registry
-      if: github.actor != 'dependabot[bot]'
       uses: docker/login-action@v1.12.0
       with:
         registry: ghcr.io
@@ -60,8 +59,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         tags: ${{ env.DOCKER_IMAGE}}-middleman:${{ env.BRANCH_TAG }}
-        push: ${{ github.actor != 'dependabot[bot]' }}
-        load: ${{ github.actor == 'dependabot[bot]' }}
+        push: true
         target: middleman
         cache-from: |
           type=registry,ref=${{ env.DOCKER_IMAGE}}-middleman:master
