[0854] Added related settings

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -104,3 +104,7 @@ features:
     has_current_cycle_started?: true
     # During rollover providers should be able to edit current & next recruitment cycle courses
     can_edit_current_and_next_cycles: false
+  allocations:
+    # state: open # Users can make requests for allocations
+    # state: closed # Readonly - Users can see if they have or have not made request (does not show number of places)
+    state: confirmed # final allocation places are displayed to users in a readonly state
