--- a/config/settings.yml
+++ b/config/settings.yml
@@ -104,3 +104,5 @@ features:
     has_current_cycle_started?: true
     # During rollover providers should be able to edit current & next recruitment cycle courses
     can_edit_current_and_next_cycles: false
+
+current_cycle: 2022
