--- a/config/settings.yml
+++ b/config/settings.yml
@@ -103,6 +103,6 @@ features:
     # actually starting when it would be set to false
     has_current_cycle_started?: true
     # During rollover providers should be able to edit current & next recruitment cycle courses
-    can_edit_current_and_next_cycles: false
+    can_edit_current_and_next_cycles: true
 
 current_cycle: 2022
