[622] Rubocop providers only

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -105,4 +105,4 @@ features:
     # During rollover providers should be able to edit current & next recruitment cycle courses
     can_edit_current_and_next_cycles: true
 
-current_cycle: 2022
+#current_cycle: 2022
