Maintenance page return empty 503 for API requests
If the maintenance page is enable requests to the /api path will not
receive an HTML response, instead they will get an empty 503 response.

--- a/service_unavailable_page/web/nginx.conf
+++ b/service_unavailable_page/web/nginx.conf
@@ -23,13 +23,18 @@ http {
     # Request to / returns 403 (directory index forbidden)
     # Request to anything else than /internal return 404 not found
     # The maintenance page is served as error page
-    # And the response code is changed to 500
-    error_page 403 404 =500 /internal/index.html;
+    # And the response code is changed to 503
+    error_page 403 404 =503 /internal/index.html;
 
     # Assets are relative to the URL. We capture the prefix and filename
     # and serve them from the right files
     location ~ /(stylesheets|assets|javascript)/(.*)$ {
       alias public/internal/$1/$2;
+    }
+
+    # API requests receive an empty 503 response
+    location ~ ^/api/? {
+      return 503;
     }
   }
 }
