[0942] Amended allocations state to be confirmed for review

--- a/config/settings/review.yml
+++ b/config/settings/review.yml
@@ -20,4 +20,4 @@ allocations_close_date: 2022-07-02
 features:
   display_migration_signin: false
   allocations:
-    state: closed
+    state: confirmed
