[703] Enable magic links sign in

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -31,6 +31,8 @@ authentication:
   issuer: "publish-teacher-training"
   audience: "teacher-training-api"
   subject: "access"
+  # mode: magic_link  # when dfe_signin is down
+  # mode: persona     # none critical systems, ie localhost
 
 current_recruitment_cycle_year: 2022
 next_cycle_open_date: 2022-10-5
