[703] Temporary enable magic link for testing

--- a/config/settings/review.yml
+++ b/config/settings/review.yml
@@ -12,7 +12,8 @@ search_ui:
 
 authentication:
   secret: secret
-  mode: persona
+  # mode: persona
+  mode: magic_link
 
 allocation_cycle_year: 2022
 allocations_close_date: 2022-07-02
