--- a/config/settings.yml
+++ b/config/settings.yml
@@ -103,6 +103,7 @@ feedback:
 features:
   send_request_data_to_bigquery: false
   display_migration_signin: true
+  new_publish: false
   rollover:
     # Normally a short period of time between rollover and the next cycle
     # actually starting when it would be set to false
