--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -7,7 +7,7 @@ search_ui:
   base_url: https://staging.find-postgraduate-teacher-training.service.gov.uk
 
 # URL of this app for the callback after sigining in
-base_url: https://staging2.publish-teacher-training-courses.service.gov.uk
+base_url: https://staging.publish-teacher-training-courses.service.gov.uk
 
 dfe_signin:
   issuer: https://pp-oidc.signin.education.gov.uk
