--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -6,7 +6,7 @@ find_url: https://www.find-postgraduate-teacher-training.service.gov.uk
 search_ui:
   base_url: https://www.find-postgraduate-teacher-training.service.gov.uk
 
-base_url: https://www2.publish-teacher-training-courses.service.gov.uk
+base_url: https://www.publish-teacher-training-courses.service.gov.uk
 
 dfe_signin:
   issuer: https://oidc.signin.education.gov.uk
