--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -9,7 +9,7 @@ environment:
 search_ui:
   base_url: https://sandbox.find-postgraduate-teacher-training.service.gov.uk
 
-base_url: https://sandbox2.publish-teacher-training-courses.service.gov.uk
+base_url: https://sandbox.publish-teacher-training-courses.service.gov.uk
 
 dfe_signin:
   issuer: https://oidc.signin.education.gov.uk
