replace internal BQ code with dfe-analytics gem
This common implementation of BigQuery integration will allow us to keep
up-to-date with changes the Data Insights team make to the analytics
implementation.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -84,7 +84,7 @@ google:
   bigquery:
     project_id: replaceme
     dataset: replaceme
-    api_json_key: ""
+    api_json_key: "{}"
     table_name: events
 
 feedback:
