[703] Update auth mode back to persona for review

--- a/config/settings/review.yml
+++ b/config/settings/review.yml
@@ -12,8 +12,7 @@ search_ui:
 
 authentication:
   secret: secret
-  # mode: persona
-  mode: magic_link
+  mode: persona
 
 allocation_cycle_year: 2022
 allocations_close_date: 2022-07-02
