Add publish cloudapps route

--- a/config/settings/rollover.yml
+++ b/config/settings/rollover.yml
@@ -1,6 +1,6 @@
 gcp_api_key: please_change_me
 publish_api_url: https://teacher-training-api-rollover.london.cloudapps.digital
-publish_url: https://teacher-training-api-rollover.london.cloudapps.digital
+publish_url: https://publish-rollover.london.cloudapps.digital
 find_url: https://find-rollover.london.cloudapps.digital
 
 # URL of this app for the callback after sigining in
