Add feature flag

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -104,6 +104,7 @@ feedback:
 
 features:
   send_request_data_to_bigquery: false
+  new_publish_navigation: false
   rollover:
     # Normally a short period of time between rollover and the next cycle
     # actually starting when it would be set to false
