Remove rollover deploy from merge to master

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -195,7 +195,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        environment: [qa,staging,production,sandbox,rollover]
+        environment: [qa,staging,production,sandbox]
       max-parallel: 1
     steps:
       - name: Checkout
