--- a/config/settings/rollover.yml
+++ b/config/settings/rollover.yml
@@ -4,7 +4,7 @@ publish_url: https://publish-rollover.london.cloudapps.digital
 find_url: https://find-rollover.london.cloudapps.digital
 
 # URL of this app for the callback after sigining in
-base_url: https://teacher-training-api-rollover.london.cloudapps.digital
+base_url: https://publish-rollover.london.cloudapps.digital
 
 search_ui:
   base_url: https://find-rollover.london.cloudapps.digital
