Update slack channels for build failures

--- a/.github/workflows/build-nocache.yml
+++ b/.github/workflows/build-nocache.yml
@@ -87,11 +87,11 @@ jobs:
         if: ${{ success() }}
         run: docker image push --all-tags ${{ env.DOCKER_IMAGE }}
 
-      - name: 'Notify #twd_publish_tech on failure'
+      - name: 'Notify #twd_findpub_tech on failure'
         if: failure()
         uses: rtCamp/action-slack-notify@master
         env:
-          SLACK_CHANNEL: twd_publish_tech
+          SLACK_CHANNEL: twd_findpub_tech
           SLACK_COLOR: '#ef5343'
           SLACK_ICON_EMOJI: ':github-logo:'
           SLACK_USERNAME: Teacher Training API
