--- a/.github/actions/smoke-test/action.yml
+++ b/.github/actions/smoke-test/action.yml
@@ -40,11 +40,11 @@ runs:
       shell: bash
       run: RAILS_ENV=${{ inputs.environment }} ./bin/bundle exec rspec spec/smoke --format documentation
 
-    - name: 'Notify #twd_publish_tech on failure'
+    - name: 'Notify #twd_findpub_tech on failure'
       if: ${{ failure() && inputs.environment != 'review' }}
       uses: rtCamp/action-slack-notify@master
       env:
-        SLACK_CHANNEL: twd_publish_tech
+        SLACK_CHANNEL: twd_findpub_tech
         SLACK_COLOR: '#ef5343'
         SLACK_ICON_EMOJI: ':github-logo:'
         SLACK_USERNAME: Teacher Training API
