--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -87,7 +87,7 @@ jobs:
       if: ${{ failure() && github.ref == 'refs/heads/master' }}
       uses: rtCamp/action-slack-notify@master
       env:
-        SLACK_CHANNEL: twd_publish_tech
+        SLACK_CHANNEL: twd_findpub_tech
         SLACK_COLOR: '#ef5343'
         SLACK_ICON_EMOJI: ':github-logo:'
         SLACK_USERNAME: Teacher Training API
@@ -135,7 +135,7 @@ jobs:
       if: ${{ failure() && github.ref == 'refs/heads/master' }}
       uses: rtCamp/action-slack-notify@master
       env:
-        SLACK_CHANNEL: twd_publish_tech
+        SLACK_CHANNEL: twd_findpub_tech
         SLACK_COLOR: '#ef5343'
         SLACK_ICON_EMOJI: ':github-logo:'
         SLACK_USERNAME: Teacher Training API
