--- a/config/settings.yml
+++ b/config/settings.yml
@@ -34,7 +34,7 @@ authentication:
   # mode: magic_link  # when dfe_signin is down
   # mode: persona     # none critical systems, ie localhost
 
-current_recruitment_cycle_year: 2022
+current_recruitment_cycle_year: 2023
 next_cycle_open_date: 2022-10-5
 
 allocation_cycle_year: 2021
@@ -109,7 +109,7 @@ features:
     # actually starting when it would be set to false
     has_current_cycle_started?: true
     # During rollover providers should be able to edit current & next recruitment cycle courses
-    can_edit_current_and_next_cycles: true
+    can_edit_current_and_next_cycles: false
     show_next_cycle_allocation_recruitment_page: false
   allocations:
     # state: open # Users can make requests for allocations
