--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -116,7 +116,7 @@ jobs:
         SNYK_TOKEN: ${{ steps.get-secret.outputs.snyk_token }}
       with:
         image: ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_IMAGE_TAG }}
-        args: --file=Dockerfile --severity-threshold=high
+        args: --file=Dockerfile --severity-threshold=high --prune-repeated-subdependencies
 
     - name: Push ${{ env.DOCKER_IMAGE }} images
       if: ${{ success() && !contains(github.event.pull_request.labels.*.name, 'deploy') }}
