--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -165,7 +165,7 @@ jobs:
     - name: Run tests
       run: |
         docker-compose run --rm -v ${PWD}/coverage:/app/coverage \
-        web /bin/sh -c "bundle config --local disable_exec_load true && 'bundle exec rake parallel:setup parallel:spec[,, -O .azure_parallel]'"
+        web /bin/sh -c "bundle config --local disable_exec_load true && bundle exec rake parallel:setup parallel:spec[,, -O .azure_parallel]"
       env:
         IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
 
