Updates for TTAPI rename to Publish
update slack message and maintenance page

--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -90,7 +90,7 @@ runs:
         SLACK_CHANNEL: twd_findpub_tech
         SLACK_COLOR: '#ef5343'
         SLACK_ICON_EMOJI: ':github-logo:'
-        SLACK_USERNAME: Teacher Training API
+        SLACK_USERNAME: Publish Teacher Training
         SLACK_TITLE: Deploy to ${{ inputs.environment }} Failed
-        SLACK_MESSAGE: ':alert: <!channel> Build failure on ${{ inputs.environment }} :sadparrot:'
+        SLACK_MESSAGE: ':alert: <!channel> Deployment failure on ${{ inputs.environment }} :sadparrot:'
         SLACK_WEBHOOK: ${{ inputs.slack-webhook }}
