--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -129,9 +129,9 @@ jobs:
         SLACK_CHANNEL: twd_findpub_tech
         SLACK_COLOR: '#ef5343'
         SLACK_ICON_EMOJI: ':github-logo:'
-        SLACK_USERNAME: Teacher Training API
+        SLACK_USERNAME: Publish Teacher Training
         SLACK_TITLE: Build failure
-        SLACK_MESSAGE: ':alert: <!channel> Teacher Training API Build failure :sadparrot:'
+        SLACK_MESSAGE: ':alert: <!channel> Publish Teacher Training Build failure :sadparrot:'
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
   test:
@@ -190,9 +190,9 @@ jobs:
         SLACK_CHANNEL: twd_findpub_tech
         SLACK_COLOR: '#ef5343'
         SLACK_ICON_EMOJI: ':github-logo:'
-        SLACK_USERNAME: Teacher Training API
+        SLACK_USERNAME: Publish Teacher Training
         SLACK_TITLE: Test failure
-        SLACK_MESSAGE: ':alert: <!channel> Teacher Training API Test failure :sadparrot:'
+        SLACK_MESSAGE: ':alert: <!channel> Publish Teacher Training Test failure :sadparrot:'
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
   deploy-review-app:
