Exclude open api files from rubocop
This is due to the open api being on ruby version 2.7.5 and the app being on 3.1

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,3 +29,11 @@ Naming/PredicateName:
 # Remove after we fix offences
 Rails/I18nLocaleTexts:
   Enabled: false
+
+Style/HashSyntax:
+  Exclude:
+    - 'docs/lib/govuk_tech_docs/open_api/renderer.rb'
+
+Naming/BlockForwarding:
+  Exclude:
+    - 'docs/lib/govuk_tech_docs/open_api/extension.rb'
