--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ on:
         - production
         - sandbox
         - rollover
+        - loadtest
       sha:
         description: Commit sha to be deployed
         required: true
