Replace reference to deprecated action

--- a/.github/workflows/database-restore.yml
+++ b/.github/workflows/database-restore.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: DFE-Digital/bat-infrastructure/actions/setup-cf-cli@main
+      - uses: DFE-Digital/github-actions/setup-cf-cli@master
         name: Setup cf cli
         with:
          CF_USERNAME: ${{ secrets.CF_USERNAME_PRODUCTION }}
