Add FeesComponent and BursaryComponent
- Add feature flag (bursaries_and_scholarships_announced) and set to active.

- Edit the funding option method so that bursary information is only displayed if the feature flag is active when on Find. It will have to be displayed on preview - as users can preview their courses before the feature flag is active.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -116,3 +116,6 @@ cookies:
 
 find:
   apply_base_url: https://www.apply-for-teacher-training.service.gov.uk
+
+find_features:
+  bursaries_and_scholarships_announced: true
