[430] Add visa fields to dfe-analytics whitelist

--- a/config/analytics.yml
+++ b/config/analytics.yml
@@ -56,6 +56,8 @@ shared:
     - accept_maths_gcse_equivalency
     - accept_science_gcse_equivalency
     - additional_gcse_equivalencies
+    - can_sponsor_skilled_worker_visa
+    - can_sponsor_student_visa
   course_site:
     - id
     - course_id
