[449 ] Sync the user_permission model

--- a/config/analytics.yml
+++ b/config/analytics.yml
@@ -195,3 +195,9 @@ shared:
     - created_at
     - updated_at
     - course_publish
+  user_permission:
+    - id
+    - user_id
+    - provider_id
+    - created_at
+    - updated_at
